xong quyền ingredient user

--- a/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Create.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Create.cshtml
@@ -4,6 +4,11 @@
 @{
     ViewData["Title"] = "Create";
 }
+<head>
+
+    <!-- Tuan Anh css-->
+    <link href="~/css/tuananh.css" rel="stylesheet" />
+</head>
 
 <div class="container my-5">
     <h1 class="text-center">Thêm Nguyên Liệu Mới</h1>
