--- a/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Delete.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Delete.cshtml
@@ -4,7 +4,11 @@
 @{
     ViewData["Title"] = "Xóa Thành Phần";
 }
+<head>
 
+    <!-- Tuan Anh css-->
+    <link href="~/css/tuananh.css" rel="stylesheet" />
+</head>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8">
