--- a/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Details.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/RecipeIngredients/Details.cshtml
@@ -4,7 +4,11 @@
 @{
     ViewData["Title"] = "Chi Tiết Nguyên Liệu";
 }
+<head>
 
+    <!-- Tuan Anh css-->
+    <link href="~/css/tuananh.css" rel="stylesheet" />
+</head>
 <div class="container my-5">
     <!-- Tiêu đề -->
     <div class="border-start border-5 border-primary ps-4 mb-5">
