--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -64,11 +64,14 @@
                             <a href="/Login" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
-                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="/UserFavorites/Index" class="dropdown-item">Món ăn yêu thích</a>
-                                <a href="/UsersPage/UpdatePass" class="dropdown-item">Đổi mật khẩu</a>
-                                <a href="/Logout" class="dropdown-item">Đăng xuất</a>
-                            </div>
+                            @if (Model.LoggedInUsername != null)
+                            {
+                                <div class="dropdown-menu m-0 bg-secondary rounded-0">
+                                    <a href="/UserFavorites/Index" class="dropdown-item">Món ăn yêu thích</a>
+                                    <a href="/UsersPage/UpdatePass" class="dropdown-item">Đổi mật khẩu</a>
+                                    <a href="/Logout" class="dropdown-item">Đăng xuất</a>
+                                </div>
+                            }
                         </div>
                            
                         </div>
